Overflow fixes

--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,13 @@
 html,
 body {
   width: 100%;
-  min-width: 235px;
+  min-width: 750px;
   min-height: 100%;
   margin: 0;
 }
 body {
+  min-height: 100vh;
+  position: relative;
   background-image:url("./main.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -23,13 +25,13 @@ body {
 }
  /* Style the tab */
  .tab {
-  overflow: hidden;
+  width: 579px;
   background-color: #ff80df;
   border-radius: 5px 5px 0 0;
-  width: 579px;
-  margin: 20px 0 10px 20px;
+  margin-bottom: 20px;
   z-index: 4;
   position: relative;
+  overflow: hidden;
 }
 /* Style the buttons that are used to open the tab content */
 .tab button {
@@ -58,7 +60,6 @@ body {
   display: none;
   width: 552px;
   padding: 6px 12px;
-  margin-left: 20px;
   border: 1px solid #ccc;
   border-top: none;
   border-radius: 0 0 5px 5px;
@@ -73,11 +74,18 @@ body {
 }
 .topright:hover {color: #ff33cc;}
 
-.content img {width: 513px;}
+.content {
+  padding: 20px 20px 150px 20px;
+  position: relative;
+}
+.content img {
+  width: 513px;
+}
 
-h3 {color: #ff33cc;
-  
-font-size: 20px;}
+h3 {
+  color: #ff33cc;
+  font-size: 20px;
+}
 
 h5 {
   margin-bottom: 0;
@@ -93,7 +101,7 @@ footer {
   padding: 20px 0;
   text-align: center;
   position: absolute;
-  bottom: 0;
+  bottom: 20px;
   z-index: 2;
 }
 footer .social ul {
